--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
     "@trpc/client": "^9.25.3",
@@ -26,6 +27,7 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.49.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
