--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.4",
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
