--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@googlemaps/typescript-guards": "^2.0.1",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
     "@tailwindcss/typography": "^0.5.4",
@@ -20,6 +21,7 @@
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
     "daisyui": "^2.19.0",
+    "fast-equals": "^4.0.1",
     "next": "12.2.0",
     "next-auth": "^4.9.0",
     "react": "18.2.0",
@@ -37,7 +39,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "prisma": "^4.0.0",
+    "prisma": "^4.1.0",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
