--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@googlemaps/typescript-guards": "^2.0.1",
     "@next-auth/prisma-adapter": "^1.0.3",
@@ -20,6 +24,7 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "babel-plugin-macros": "^3.1.0",
     "daisyui": "^2.19.0",
     "next": "12.2.0",
     "next-auth": "^4.9.0",
@@ -30,6 +35,10 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/google.maps": "^3.49.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
@@ -41,5 +50,10 @@
     "prisma": "^4.1.1",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
+  },
+  "babelMacros": {
+    "fontawesome-svg-core": {
+      "license": "free"
+    }
   }
 }
