--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "daisyui": "^2.19.0",
     "next": "12.2.0",
     "next-auth": "^4.9.0",
+    "nodemailer": "^6.7.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.1",
