--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
@@ -18,7 +18,7 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "@googlemaps/typescript-guards": "^2.0.1",
     "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^4.1.1",
+    "@prisma/client": "^4.2.1",
     "@tailwindcss/typography": "^0.5.4",
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
@@ -43,7 +43,8 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "prisma": "^4.1.1",
+    "prettier": "2.7.1",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   },
