--- a/package.json
+++ b/package.json
@@ -1,56 +1,49 @@
 {
-  "name": "coffee-theorem",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
-  },
-  "dependencies": {
-    "@formkit/auto-animate": "^1.0.0-beta.3",
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-regular-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@googlemaps/react-wrapper": "^1.1.35",
-    "@googlemaps/typescript-guards": "^2.0.1",
-    "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^4.3.0",
-    "@tailwindcss/typography": "^0.5.4",
-    "@trpc/client": "^9.25.3",
-    "@trpc/next": "^9.25.3",
-    "@trpc/react": "^9.25.3",
-    "@trpc/server": "^9.25.3",
-    "daisyui": "^2.19.0",
-    "next": "12.2.0",
-    "next-auth": "^4.9.0",
-    "nodemailer": "^6.7.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-query": "^3.39.1",
-    "superjson": "^1.9.1",
-    "zod": "^3.17.3"
-  },
-  "devDependencies": {
-    "@types/google.maps": "^3.49.2",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "postcss": "^8.4.14",
-    "prettier": "2.7.1",
-    "prisma": "^4.3.0",
-    "tailwindcss": "^3.1.6",
-    "typescript": "4.7.4"
-  },
-  "babelMacros": {
-    "fontawesome-svg-core": {
-      "license": "free"
+    "name": "coffee-theorem",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "postinstall": "prisma generate"
+    },
+    "dependencies": {
+        "@googlemaps/react-wrapper": "^1.1.35",
+        "@googlemaps/typescript-guards": "^2.0.1",
+        "@headlessui/react": "^1.7.0",
+        "@heroicons/react": "^2.0.10",
+        "@next-auth/prisma-adapter": "^1.0.3",
+        "@prisma/client": "^4.3.1",
+        "@tailwindcss/typography": "^0.5.4",
+        "@trpc/client": "^9.25.3",
+        "@trpc/next": "^9.25.3",
+        "@trpc/react": "^9.25.3",
+        "@trpc/server": "^9.25.3",
+        "framer-motion": "^7.3.2",
+        "next": "12.2.0",
+        "next-auth": "^4.9.0",
+        "nodemailer": "^6.7.7",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-query": "^3.39.1",
+        "superjson": "^1.9.1",
+        "zod": "^3.17.3"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.3",
+        "@types/google.maps": "^3.49.2",
+        "@types/node": "18.0.0",
+        "@types/react": "18.0.14",
+        "@types/react-dom": "18.0.5",
+        "autoprefixer": "^10.4.8",
+        "eslint": "8.18.0",
+        "eslint-config-next": "12.1.6",
+        "postcss": "^8.4.16",
+        "prettier": "2.7.1",
+        "prisma": "^4.3.1",
+        "tailwindcss": "^3.1.8",
+        "typescript": "4.7.4"
     }
-  }
 }
