--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
         "prettier": "2.7.1",
         "prisma": "^4.3.1",
         "tailwindcss": "^3.1.8",
-        "typescript": "4.7.4"
+        "typescript": "^4.9.0-dev.20220918"
     }
 }
