--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
-    "name": "coffee-theorem",
+    "name": "coffee-theorem-trpcv10",
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
         "build": "next build",
-        "start": "next start",
+        "dev": "next dev",
+        "postinstall": "prisma generate",
         "lint": "next lint",
-        "postinstall": "prisma generate"
+        "start": "next start"
     },
     "dependencies": {
-        "@googlemaps/react-wrapper": "^1.1.35",
-        "@googlemaps/typescript-guards": "^2.0.1",
-        "@headlessui/react": "^1.7.0",
-        "@heroicons/react": "^2.0.10",
-        "@next-auth/prisma-adapter": "^1.0.3",
-        "@prisma/client": "^4.3.1",
-        "@tailwindcss/typography": "^0.5.4",
-        "@trpc/client": "^9.25.3",
-        "@trpc/next": "^9.25.3",
-        "@trpc/react": "^9.25.3",
-        "@trpc/server": "^9.25.3",
-        "framer-motion": "^7.3.2",
-        "next": "12.2.0",
-        "next-auth": "^4.9.0",
-        "nodemailer": "^6.7.7",
+        "@headlessui/react": "^1.7.2",
+        "@heroicons/react": "^2.0.11",
+        "@next-auth/prisma-adapter": "^1.0.4",
+        "@prisma/client": "^4.1.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.7",
+        "@tanstack/react-query": "^4.3.9",
+        "@trpc/client": "10.0.0-proxy-beta.2",
+        "@trpc/next": "10.0.0-proxy-beta.2",
+        "@trpc/react": "10.0.0-proxy-beta.2",
+        "@trpc/server": "10.0.0-proxy-beta.2",
+        "framer-motion": "^7.3.6",
+        "next": "12.3.1",
+        "next-auth": "^4.10.2",
+        "nodemailer": "^6.7.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-query": "^3.39.1",
-        "superjson": "^1.9.1",
-        "zod": "^3.17.3"
+        "superjson": "1.9.1",
+        "zod": "^3.18.0"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.3",
-        "@types/google.maps": "^3.49.2",
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
-        "autoprefixer": "^10.4.8",
-        "eslint": "8.18.0",
-        "eslint-config-next": "12.1.6",
-        "postcss": "^8.4.16",
-        "prettier": "2.7.1",
-        "prisma": "^4.3.1",
-        "tailwindcss": "^3.1.8",
-        "typescript": "^4.9.0-dev.20220918"
+        "@typescript-eslint/eslint-plugin": "^5.33.0",
+        "@typescript-eslint/parser": "^5.33.0",
+        "autoprefixer": "^10.4.7",
+        "eslint": "8.22.0",
+        "eslint-config-next": "12.3.1",
+        "postcss": "^8.4.14",
+        "prettier": "^2.7.1",
+        "prisma": "^4.1.0",
+        "tailwindcss": "^3.1.6",
+        "typescript": "4.7.4",
+        "zod-prisma": "^0.5.4"
+    },
+    "ct3aMetadata": {
+        "initVersion": "6.0.0-next.2dd37e1"
     }
 }
