--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "coffee-theorem-trpcv10",
+    "name": "coffee-theorem",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -13,7 +13,6 @@
         "@headlessui/react": "^1.7.2",
         "@heroicons/react": "^2.0.11",
         "@next-auth/prisma-adapter": "^1.0.4",
-        "@prisma/client": "^4.1.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.7",
         "@tanstack/react-query": "^4.3.9",
@@ -28,9 +27,12 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "superjson": "1.9.1",
-        "zod": "^3.18.0"
+        "vercel": "^28.4.5",
+        "zod": "^3.18.0",
+        "zod-prisma-updated": "^0.5.7"
     },
     "devDependencies": {
+        "@prisma/client": "^4.4.0",
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
@@ -41,10 +43,9 @@
         "eslint-config-next": "12.3.1",
         "postcss": "^8.4.14",
         "prettier": "^2.7.1",
-        "prisma": "^4.1.0",
+        "prisma": "^4.4.0",
         "tailwindcss": "^3.1.6",
-        "typescript": "4.7.4",
-        "zod-prisma": "^0.5.4"
+        "typescript": "4.7.4"
     },
     "ct3aMetadata": {
         "initVersion": "6.0.0-next.2dd37e1"
