--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@trpc/next": "10.0.0-proxy-beta.2",
         "@trpc/react": "10.0.0-proxy-beta.2",
         "@trpc/server": "10.0.0-proxy-beta.2",
+        "clsx": "^1.2.1",
         "framer-motion": "^7.3.6",
         "next": "12.3.1",
         "next-auth": "^4.10.2",
@@ -29,7 +30,7 @@
         "superjson": "1.9.1",
         "vercel": "^28.4.5",
         "zod": "^3.18.0",
-        "zod-prisma-updated": "^0.5.7"
+        "zod-prisma": "^0.5.4"
     },
     "devDependencies": {
         "@prisma/client": "^4.4.0",
