--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
         "zod-prisma": "^0.5.4"
     },
     "devDependencies": {
-        "@prisma/client": "^4.4.0",
-        "@types/node": "18.0.0",
+        "@prisma/client": "^4.6.1",
+        "@types/node": "^18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
         "@typescript-eslint/eslint-plugin": "^5.33.0",
@@ -44,9 +44,10 @@
         "eslint-config-next": "12.3.1",
         "postcss": "^8.4.14",
         "prettier": "^2.7.1",
-        "prisma": "^4.4.0",
+        "prisma": "^4.6.1",
         "tailwindcss": "^3.1.6",
-        "typescript": "4.7.4"
+        "ts-node": "^10.9.1",
+        "typescript": "^4.7.4"
     },
     "ct3aMetadata": {
         "initVersion": "6.0.0-next.2dd37e1"
