--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "eslint": "8.22.0",
         "eslint-config-next": "12.3.1",
         "postcss": "^8.4.14",
-        "prettier": "^2.7.1",
+        "prettier": "^2.8.3",
+        "prettier-plugin-tailwindcss": "^0.2.1",
         "prisma": "^4.6.1",
         "tailwindcss": "^3.1.6",
         "ts-node": "^10.9.1",
