--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
         "@next-auth/prisma-adapter": "^1.0.4",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.7",
-        "@tanstack/react-query": "^4.3.9",
-        "@trpc/client": "10.0.0-proxy-beta.2",
-        "@trpc/next": "10.0.0-proxy-beta.2",
-        "@trpc/react": "10.0.0-proxy-beta.2",
-        "@trpc/server": "10.0.0-proxy-beta.2",
+        "@tanstack/react-query": "^4.22.4",
+        "@trpc/client": "^10.9.0",
+        "@trpc/next": "^10.9.0",
+        "@trpc/react-query": "^10.9.0",
+        "@trpc/server": "^10.9.0",
         "clsx": "^1.2.1",
         "framer-motion": "^7.3.6",
         "next": "12.3.1",
@@ -33,6 +33,7 @@
         "zod-prisma": "^0.5.4"
     },
     "devDependencies": {
+        "@mermaid-js/mermaid-cli": "^9.3.0",
         "@prisma/client": "^4.6.1",
         "@types/node": "^18.0.0",
         "@types/react": "18.0.14",
@@ -46,6 +47,7 @@
         "prettier": "^2.8.3",
         "prettier-plugin-tailwindcss": "^0.2.1",
         "prisma": "^4.6.1",
+        "prisma-erd-generator": "^1.2.5",
         "tailwindcss": "^3.1.6",
         "ts-node": "^10.9.1",
         "typescript": "^4.7.4"
