--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "next": "12.3.1",
         "next-auth": "^4.10.2",
         "nodemailer": "^6.7.8",
+        "prisma-erd-generator": "^1.2.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "superjson": "1.9.1",
