--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
         "react-dom": "18.2.0",
         "superjson": "1.12.2",
         "vercel": "^28.16.7",
-        "zod": "^3.20.6",
-        "zod-prisma": "^0.5.4"
+        "zod": "^3.20.6"
     },
     "devDependencies": {
         "@mermaid-js/mermaid-cli": "^9.4.0",
