--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,12 @@
     "jsx": "preserve",
     "incremental": true,
     "noUncheckedIndexedAccess": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "paths": {
+      "@ui/*": ["./src/components/ui/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@types/*": ["./src/types/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
   "exclude": ["node_modules"]
