--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
         "start": "next start"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-pro": "^6.4.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/pro-duotone-svg-icons": "^6.4.0",
+        "@fortawesome/pro-light-svg-icons": "^6.4.0",
+        "@fortawesome/pro-regular-svg-icons": "^6.4.0",
+        "@fortawesome/pro-solid-svg-icons": "^6.4.0",
+        "@fortawesome/pro-thin-svg-icons": "^6.4.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@fortawesome/sharp-light-svg-icons": "^6.4.0",
+        "@fortawesome/sharp-regular-svg-icons": "^6.4.0",
+        "@fortawesome/sharp-solid-svg-icons": "^6.4.0",
         "@headlessui/react": "^1.7.12",
         "@heroicons/react": "^2.0.16",
         "@next-auth/prisma-adapter": "^1.0.5",
@@ -21,6 +32,7 @@
         "@trpc/react-query": "^10.13.0",
         "@trpc/server": "^10.13.0",
         "clsx": "^1.2.1",
+        "cva": "npm:class-variance-authority@^0.5.2",
         "framer-motion": "^10.0.1",
         "next": "13.2.1",
         "next-auth": "^4.19.2",
@@ -35,7 +47,7 @@
     },
     "devDependencies": {
         "@mermaid-js/mermaid-cli": "^9.4.0",
-        "@prisma/client": "^4.10.1",
+        "@prisma/client": "^4.12.0",
         "@types/node": "^18.14.2",
         "@types/react": "18.0.28",
         "@types/react-dom": "18.0.11",
@@ -47,7 +59,7 @@
         "postcss": "^8.4.21",
         "prettier": "^2.8.4",
         "prettier-plugin-tailwindcss": "^0.2.3",
-        "prisma": "^4.10.1",
+        "prisma": "^4.12.0",
         "tailwindcss": "^3.2.7",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
