--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Run Dev Server",
       "type": "shell",
-      "command": "npm run dev",
+      "command": "vercel dev",
       "presentation": {
         "echo": true,
         "reveal": "always",
