--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.1.1",
-    "@storybook/addon-interactions": "^7.1.1",
-    "@storybook/addon-links": "^7.1.1",
+    "@storybook/addon-essentials": "^7.2.3",
+    "@storybook/addon-interactions": "^7.2.3",
+    "@storybook/addon-links": "^7.2.3",
+    "@storybook/addon-mdx-gfm": "^7.2.3",
     "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.1.1",
-    "@storybook/nextjs": "^7.1.1",
-    "@storybook/react": "^7.1.1",
+    "@storybook/blocks": "^7.2.3",
+    "@storybook/nextjs": "^7.2.3",
+    "@storybook/react": "^7.2.3",
     "@storybook/testing-library": "^0.2.0",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
@@ -51,7 +52,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "prisma": "^5.0.0",
-    "storybook": "^7.1.1",
+    "storybook": "^7.2.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.4"
   },
