--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod-prisma-types": "^2.7.9"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.2.3",
